; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_vnode_pager.c_vnode_pager_get_name.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_vnode_pager.c_vnode_pager_get_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode = type { i32 }

@FALSE = common dso_local global i64 0, align 8
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vnode_pager_get_name(%struct.vnode* %0, i8* %1, i64 %2, i8* %3, i64 %4, i64* %5) #0 {
  %7 = alloca %struct.vnode*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64*, align 8
  %13 = alloca i8*, align 8
  store %struct.vnode* %0, %struct.vnode** %7, align 8
  store i8* %1, i8** %8, align 8
  store i64 %2, i64* %9, align 8
  store i8* %3, i8** %10, align 8
  store i64 %4, i64* %11, align 8
  store i64* %5, i64** %12, align 8
  %14 = load i64, i64* @FALSE, align 8
  %15 = load i64*, i64** %12, align 8
  store i64 %14, i64* %15, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %18, label %25

18:                                               ; preds = %6
  %19 = load %struct.vnode*, %struct.vnode** %7, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = load i64, i64* %9, align 8
  %22 = trunc i64 %21 to i32
  %23 = load i64*, i64** %12, align 8
  %24 = call i32 @safe_getpath(%struct.vnode* %19, i32* null, i8* %20, i32 %22, i64* %23)
  br label %25

25:                                               ; preds = %18, %6
  %26 = load i8*, i8** %8, align 8
  %27 = icmp eq i8* %26, null
  br i1 %27, label %32, label %28

28:                                               ; preds = %25
  %29 = load i64*, i64** %12, align 8
  %30 = load i64, i64* %29, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %44

32:                                               ; preds = %28, %25
  %33 = load i8*, i8** %10, align 8
  %34 = icmp ne i8* %33, null
  br i1 %34, label %35, label %44

35:                                               ; preds = %32
  %36 = load %struct.vnode*, %struct.vnode** %7, align 8
  %37 = call i8* @vnode_getname_printable(%struct.vnode* %36)
  store i8* %37, i8** %13, align 8
  %38 = load i8*, i8** %10, align 8
  %39 = load i8*, i8** %13, align 8
  %40 = load i64, i64* %11, align 8
  %41 = call i32 @strlcpy(i8* %38, i8* %39, i64 %40)
  %42 = load i8*, i8** %13, align 8
  %43 = call i32 @vnode_putname_printable(i8* %42)
  br label %44

44:                                               ; preds = %35, %32, %28
  %45 = load i32, i32* @KERN_SUCCESS, align 4
  ret i32 %45
}

declare dso_local i32 @safe_getpath(%struct.vnode*, i32*, i8*, i32, i64*) #1

declare dso_local i8* @vnode_getname_printable(%struct.vnode*) #1

declare dso_local i32 @strlcpy(i8*, i8*, i64) #1

declare dso_local i32 @vnode_putname_printable(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
